--- a/templates/all_assets.jinja
+++ b/templates/all_assets.jinja
@@ -1,3 +1,7 @@
+<table>
+<tr><th>Block</th><th>Asset</th><th>Reissuable?</th></tr>
 {% for row in assets %}
-    <a href='/asset/{{row[0]}}'>{{row[0]}}</a><br/>
+    <tr><td>{{row[0]}}</td><td><a href='/asset/{{row[2]}}'>{{row[2]}}</a></td><td>{{"Yes" if row[3] != None else "No"}}</td></tr>
 {% endfor %}
+
+</table>
