--- a/templates/all_assets.jinja
+++ b/templates/all_assets.jinja
@@ -1,10 +1,20 @@
 {% extends "page.jinja" %}
 {% block content %}
 
-<table class="table table-striped">
-<tr><th>Block</th><th>Asset</th><th>Reissuable?</th><th>Iniital Supply</th></tr>
+
+<div class="page-header">
+    <h3>Liquid Network Assets</h3>
+</div>
+<table class="table table-striped table-bordered table-hover">
+<tr><th>Block</th><th>Date</th><th>Asset</th><th>Reissuable?</th><th>Iniital Supply</th></tr>
 {% for row in assets %}
-    <tr><td>{{row[0]}}</td><td><a href='/asset/{{row[2]}}'>{{row[2]}}</a></td><td>{{"Yes" if row[4] != None else "No"}}</td><td>{{"Confidential" if row[3] == None else row[3]}}</td></tr>
+    <tr>
+        <td>{{row[0]}}</td>
+        <td>{{row[1]|timestamp}}</td>
+        <td><a href='/asset/{{row[2]}}'>{{row[2]}}</a></td>
+        <td>{{"Yes" if row[4] > 0 else "No" if row[5] == 0 else "No - Tokens Burned"}}</td>
+        <td>{{row[3]|confidential_amount}}</td>
+    </tr>
 {% endfor %}
 
 </table>
